--- a/13_My Portfolio/assets/css/style.css
+++ b/13_My Portfolio/assets/css/style.css
@@ -341,8 +341,31 @@ header .navbar ul li a:hover {
     font-size: 2.2rem;
   }
 }
+
+@media (max-width: 449px) {
+  .home .btn {
+    margin: 4rem 0;
+  }
+  .socials {
+    margin-top: 10rem;
+  }
+  .home .image img {
+    width: 50%; /* Reduce image size */
+    margin-top: -4rem; /* Adjust margin to reduce overlap */
+    margin-left: 4rem; /* Adjust left margin for better centering */
+  }
+  .home .content p {
+    font-size: 2rem;
+  }
+  .home .content p span {
+    font-size: 2rem;
+  }
+}
+
 /* hero media queries ends*/
 /* hero section end */
+
+
 
 /* about section starts */
 .about {
