--- a/44_BMI Calculator/style.css
+++ b/44_BMI Calculator/style.css
@@ -8,7 +8,9 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: rgb(104, 71, 135);
+    /* background-color: rgb(104, 71, 135);  */
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    /* background-image: linear-gradient(-225deg, #CBBACC 0%, #2580B3 100%); */
 }
 .box{
     width: 500px;
